WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
239679
Fix build error caused by LTO + Unified Sources
https://bugs.webkit.org/show_bug.cgi?id=239679
Summary
Fix build error caused by LTO + Unified Sources
Justin Michaud
Reported
2022-04-22 17:43:00 PDT
Fix build error caused by LTO + Unified Sources
Attachments
Patch
(1.98 KB, patch)
2022-04-22 17:44 PDT
,
Justin Michaud
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2022-04-22 17:44:31 PDT
Created
attachment 458189
[details]
Patch
Mark Lam
Comment 2
2022-04-22 17:49:50 PDT
Comment on
attachment 458189
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=458189&action=review
rs=me ... too
> Source/WebCore/ChangeLog:3 > + Fix build error caused by LTO + Unified Sources
nit: We'll typically say something like "Speculative fix for build error caused by LTO + Unified Sources" so that reviewers will know that the fix is of a speculative nature.
Justin Michaud
Comment 3
2022-04-23 12:23:16 PDT
I confirmed that this fixes the build error. I'll give Mac-debug another shot to run and then merge.
Justin Michaud
Comment 4
2022-04-23 14:39:38 PDT
Mac-debug timing out appears to be a known issue, landing.
EWS
Comment 5
2022-04-23 14:48:07 PDT
Committed
r293295
(
249920@main
): <
https://commits.webkit.org/249920@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 458189
[details]
.
Radar WebKit Bug Importer
Comment 6
2022-04-23 14:49:14 PDT
<
rdar://problem/92221251
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug